fixed overflowy for mobile menu

--- a/css/style.scss
+++ b/css/style.scss
@@ -61,6 +61,8 @@ header {
     background-color: rgba(255, 255, 255, 0.5);
     padding: 10rem 0;
     width: 100%;
+    height: 100vh;
+    overflow-y: hidden;
     position: fixed;
     top: 0;
     right: 0;
